third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/acquires/acquires_inferred.exp
module 0x42::acquires_inferred {
    struct R has store, key {
        f: u64,
    }
    fun check(a: address): bool {
        exists(a)
    }
    fun publish(s: &signer) {
        move_to(R{f: 1}, s);
    }
    fun read(a: address): u64 {
        *&borrow_global(a).f
    }
    fun write(a: address, x: u64): u64 {
        &mut borrow_global_mut(a).f = x;
        9
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
   ┌─ acquires_inferred.move:15:9
   │
15 │         &mut borrow_global_mut(a).f = x;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
